k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: searcade-pelican-panel
  name: searcade-pelican-panel
spec:
  #  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: searcade-pelican-panel
  template:
    metadata:
      labels:
        app: searcade-pelican-panel
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/stantabcorp/searcade-pelican-panel
          name: searcade-pelican-panel
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
          readinessProbe:
            periodSeconds: 30
            httpGet:
              port: 8000
              path: /up
              httpHeaders:
                - name: Host
                  value: panel-k8s.searcade.com
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: searcade-pelican-panel-queue
  name: searcade-pelican-panel-queue
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: searcade-pelican-panel-queue
  template:
    metadata:
      labels:
        app: searcade-pelican-panel-queue
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/stantabcorp/searcade-pelican-panel
          name: searcade-pelican-panel
          command:
            - /var/www/html/queue.sh
          imagePullPolicy: Always
