k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: searcade-pelican-panel
  name: searcade-pelican-panel-svc
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 80
  selector:
    app: searcade-pelican-panel
